# selfserver

./: AUTHORS  COPYRIGHT  ChangeLog  HISTORY  Makefile.am  Makefile.in  README  README.md  THANKS  aclocal.m4  config.h.in  configure  configure.ac  libtool  selfserver.spec.in
data/: README
debian/: control  rules
man/: Makefile.am  Makefile.in  selfserver.1.in  selfserver.x
src/: Makefile.am  Makefile.in  asclisttofits.c  asclisttofits.h  define.h  getsdsstiles.c  getsdsstiles.h  gettiles.c  gettiles.h  globals.h  main.c  makeit.c  preflist.h  prefs.c  prefs.h  types.h
src/fits/: Makefile.in  fitsutil.c
src/wcs/: Makefile.in
tests/: Makefile.am  selfserver.test
